# xerus

./: q  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  SHA512SUM  debian-10.7.0-amd64-netinst.iso.torrent
.github/workflows/: ci.yaml
src/: args.rs  bitfield.rs  client.rs  download.rs  handshake.rs  main.rs  message.rs  peer.rs  peers.rs  piece.rs  torrent.rs  worker.rs
