[package]
name = "xerus"
version = "0.1.0"
authors = ["zenoxygen <zenoxygen@protonmail.com>"]
edition = "2018"

description = "A command-line BitTorrent client, written in Rust."
homepage = "https://gitlab.com/zenoxygen/xerus"
repository = "https://gitlab.com/zenoxygen/xerus"

keywords = ["torrent", "bittorrent", "p2p"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
license = "MIT"

exclude = [".gitignore"]

[dependencies]
anyhow = "1.0"
byteorder = "1"
clap = "2.33"
hex = "0.4"
rand = "0.7.3"
reqwest = { version = "0.10", features = ["blocking"] }
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
url = "2.1"
