[package]
name = "xerus"
version = "0.1.0"
authors = ["zenoxygen <zenoxygen@protonmail.com>"]
edition = "2021"

description = "A command-line BitTorrent client, written in Rust."
homepage = "https://gitlab.com/zenoxygen/xerus"
repository = "https://gitlab.com/zenoxygen/xerus"

keywords = ["torrent", "bittorrent", "p2p"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
license = "MIT"

exclude = [".gitignore"]

[dependencies]
anyhow = "1.0.75"
boring = "4.2.0"
byteorder = "1.5.0"
clap = "2.33"
crossbeam-channel = "0.5.8"
hex = "0.4.3"
indicatif = "0.17.7"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", default-features=false, features=["blocking", "rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.12"
url = "2.5.0"
